# The-Powder-Toy

./: .gitignore  README.md  meson.build  meson_options.txt
data/: ToArray.cpp  font.bz2  meson.build
data/lang/: en_US.txt  meson.build
src/: Config.template.h  Format.cpp  Format.h  Misc.cpp  PowderMain.cpp  meson.build
src/activities/: meson.build
src/activities/browser/: Browser.cpp  Browser.h  Button.cpp  Button.h  LocalBrowser.cpp  LocalBrowser.h  Metrics.h  OnlineBrowser.cpp  OnlineBrowser.h  VoteBars.cpp  VoteBars.h  meson.build
src/activities/colorpicker/: ColorPicker.cpp  ColorPicker.h  meson.build
src/activities/console/: Console.cpp  Console.h  meson.build
src/activities/dialog/: Confirm.cpp  Confirm.h  Dialog.cpp  Dialog.h  Error.cpp  Error.h  Message.cpp  Message.h  meson.build
src/activities/edittags/: EditTags.cpp  EditTags.h  meson.build
src/activities/game/: Game.cpp  Game.h  ToolButton.cpp  ToolButton.h  ToolPanel.cpp  ToolPanel.h  meson.build
src/activities/login/: Login.cpp  Login.h  meson.build
src/activities/options/: Options.cpp  Options.h  meson.build
src/activities/preview/: Preview.cpp  Preview.h  meson.build
src/activities/profile/: AvatarButton.cpp  AvatarButton.h  Profile.cpp  Profile.h  meson.build
src/activities/save/: LocalSave.cpp  LocalSave.h  Metrics.h  OnlineSave.cpp  OnlineSave.h  Save.cpp  Save.h  meson.build
src/activities/taskbatch/: TaskBatch.cpp  TaskBatch.h  meson.build
src/activities/toolsearch/: ToolSearch.cpp  ToolSearch.h  meson.build
src/backend/: Backend.cpp  Backend.h  BackendTask.cpp  BackendTask.h  CommentInfo.h  DeleteSave.cpp  DeleteSave.h  ExecVote.cpp  ExecVote.h  FavorSave.cpp  FavorSave.h  GetComments.cpp  GetComments.h  GetPTI.cpp  GetPTI.h  GetSaveData.cpp  GetSaveData.h  GetSaveInfo.cpp  GetSaveInfo.h  GetStartupInfo.cpp  GetStartupInfo.h  ManageTag.cpp  ManageTag.h  PublishSave.cpp  PublishSave.h  PutSave.cpp  PutSave.h  SaveIDV.h  SaveInfo.h  SearchDomain.h  SearchSaves.cpp  SearchSaves.h  SearchSort.h  SearchTags.cpp  SearchTags.h  Startup.cpp  Startup.h  TagInfo.h  UserInfo.cpp  UserInfo.h  (+1 more)
src/common/: Abort.cpp  Abort.h  ExplicitSingleton.h  Line.h  Path.cpp  Path.h  Platform.cpp  Platform.h  String.h  Task.h  Worker.cpp  Worker.h  meson.build  tpt-thread-local.cpp
src/config/font/: meson.build
src/config/powder/: meson.build
src/config/render/: meson.build
src/graphics/: CommonShapes.h  FontData.cpp  FontData.h  FontReader.cpp  Pix.h  SimulationRenderer.cpp  SimulationRenderer.h  ThumbnailRenderer.cpp  ThumbnailRenderer.h  meson.build
src/gui/: Alignment.h  Appearance.h  Button.cpp  Button.h  ButtonMenu.cpp  ButtonMenu.h  CheckBox.cpp  CheckBox.h  Color.h  Component.cpp  Component.h  Cursor.h  Dragger.cpp  Dragger.h  DropDown.cpp  DropDown.h  Event.h  IconTextBox.cpp  IconTextBox.h  Icons.h  Image.cpp  Image.h  ImageButton.cpp  ImageButton.h  Label.cpp  Label.h  LinearDelayAnimation.cpp  LinearDelayAnimation.h  ModalWindow.cpp  ModalWindow.h  MomentumAnimation.cpp  MomentumAnimation.h  Pagination.cpp  Pagination.h  PathBar.h  Point.h  PopupWindow.cpp  PopupWindow.h  ProgressBar.cpp  ProgressBar.h  (+24 more)
src/gui/interface/: SaveButton.cpp
src/gui/preview/: PreviewView.cpp
src/language/: Language.cpp  Language.h  Languages.template.h  meson.build
src/lua/: CommandInterface.cpp  CommandInterface.h  LegacyLuaAPI.cpp  LuaEvents.cpp  LuaScriptHelper.h  LuaScriptInterface.cpp  LuaScriptInterface.h  LuaTCPSocket.cpp  TPTSTypes.cpp  TPTSTypes.h  TPTScriptInterface.cpp  TPTScriptInterface.h  meson.build
src/lua/luascripts/: meson.build
src/network/: CurlAssert.h  CurlRequestManager.cpp  NullRequestManager.cpp  Request.cpp  Request.h  RequestManager.cpp  RequestManager.h  meson.build
src/prefs/: GlobalPrefs.h  Prefs.cpp  Prefs.h  StampPrefs.h  meson.build
src/simulation/: BuiltinGOL.h  Element.cpp  Element.h  ElementCommon.h  ElementDefs.h  ElementNumbers.template.h  GOLString.cpp  GOLString.h  GameSave.cpp  GameSave.h  PIPEPatchRotflip.h  Sign.cpp  Sign.h  SimTool.cpp  SimTool.h  Simulation.cpp  Simulation.h  SimulationData.cpp  ToolClasses.cpp  ToolClasses.h  ToolCommon.h  ToolNumbers.template.h  ToolsDefs.h  WallType.h  meson.build
src/simulation/elements/: ACEL.cpp  ACID.cpp  AMTR.cpp  ANAR.cpp  ARAY.cpp  BANG.cpp  BCLN.cpp  BCOL.cpp  BGLA.cpp  BHOL.cpp  BIZR.cpp  BIZRG.cpp  BIZRS.cpp  BMTL.cpp  BOMB.cpp  BOYL.cpp  BRAY.cpp  BRCK.cpp  BREC.cpp  BRMT.cpp  BTRY.cpp  BVBR.cpp  C5.cpp  CAUS.cpp  CBNW.cpp  CFLM.cpp  CLNE.cpp  CLST.cpp  CNCT.cpp  CO2.cpp  COAL.cpp  CONV.cpp  CRAY.cpp  CRMC.cpp  DCEL.cpp  DESL.cpp  DEST.cpp  DEUT.cpp  DLAY.cpp  DMG.cpp  (+152 more)
src/simulation/simtools/: ADD.cpp  (+19 more)
(+25 files in other folders)
