data_files = []
data_files += to_array.process('font.bz2', extra_args: 'compressedFontData')
data_files += to_array.process('windowicon.bmp', extra_args: 'windowIcon')
data_files += to_array.process('savelocal.bmp', extra_args: 'saveLocal')
data_files += to_array.process('saveonline.bmp', extra_args: 'saveOnline')

powder_files += data_files
render_files += data_files
font_files += data_files

subdir('lang')
