powder_files += files(
	'Backend.cpp',
	'BackendTask.cpp',
	'DeleteSave.cpp',
	'ExecVote.cpp',
	'FavorSave.cpp',
	'GetPTI.cpp',
	'GetComments.cpp',
	'GetSaveData.cpp',
	'GetSaveInfo.cpp',
	'GetStartupInfo.cpp',
	'ManageTag.cpp',
	'PublishSave.cpp',
	'PutSave.cpp',
	'SearchSaves.cpp',
	'SearchTags.cpp',
	'Startup.cpp',
	'UserInfo.cpp',
)
