powder_files += files(
	'SimulationRenderer.cpp',
	'ThumbnailRenderer.cpp',
	'FontData.cpp',
)

render_files += files(
	'SimulationRenderer.cpp',
	'FontData.cpp',
)

graphics_files = files(
	'FontReader.cpp',
	'FontData.cpp',
)

powder_files += graphics_files
render_files += graphics_files
font_files += graphics_files
