gui_files = files(
	'Button.cpp',
	'ButtonMenu.cpp',
	'CheckBox.cpp',
	'Component.cpp',
	'Dragger.cpp',
	'DropDown.cpp',
	'IconTextBox.cpp',
	'Image.cpp',
	'ImageButton.cpp',
	'Label.cpp',
	'LinearDelayAnimation.cpp',
	'ModalWindow.cpp',
	'MomentumAnimation.cpp',
	'Pagination.cpp',
	'PopupWindow.cpp',
	'ProgressBar.cpp',
	'ScrollPanel.cpp',
	'SDLWindow.cpp',
	'Separator.cpp',
	'Spinner.cpp',
	'Static.cpp',
	'TextBox.cpp',
	'Texture.cpp',
	'TextWrapper.cpp',
	'Time.cpp',
	'TrackBar.cpp',
)

powder_files += gui_files
font_files += gui_files
