simulation_files = files(
	'Air.cpp',
	'Element.cpp',
	'ElementClasses.cpp',
	'GameSave.cpp',
	'GOLString.cpp',
	'Gravity.cpp',
	'Particle.cpp',
	'Sign.cpp',
	'SimulationData.cpp',
	'ToolClasses.cpp',
	'Simulation.cpp',
	'SimTool.cpp',
	'SnapshotDelta.cpp',
)

subdir('elements')
subdir('simtools')

powder_files += simulation_files
render_files += simulation_files
